Update lists at 20241024-1500

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -200,7 +200,6 @@ allow 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
-allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
@@ -708,6 +707,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
+allow 2a0d:8140:1fff:4df3::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -731,7 +731,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -780,6 +779,7 @@ allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 2a12:dd47:8513::10;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
