--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -110,7 +110,6 @@ set_real_ip_from 2001:b011:4002:3f7c::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
-set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:95ff:fe5d:2041;
@@ -765,12 +764,16 @@ set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
+set_real_ip_from 2a12:a800:1:1:2:58:56:35;
 set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
+set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
+set_real_ip_from 2a12:a800:2:1:45:138:16:230;
+set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
