--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -729,6 +729,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -776,6 +777,7 @@ allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:116;
+allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:80;
