--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -166,6 +166,7 @@ allow 154.213.184.21;
 allow 154.213.184.35;
 allow 154.213.184.39;
 allow 154.213.184.42;
+allow 154.213.184.44;
 allow 154.213.184.5;
 allow 154.213.184.63;
 allow 154.213.184.7;
@@ -302,7 +303,6 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.142.239.49;
-allow 185.149.146.193;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -1162,7 +1162,6 @@ allow 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
-allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
@@ -1425,7 +1424,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f02::1125;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1694,7 +1692,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1750,6 +1747,7 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::10;
+allow 2a12:dd47:8513::11;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1775,7 +1773,6 @@ allow 3.71.175.220;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
-allow 37.220.84.85;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1789,6 +1786,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1996,7 +1994,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2048,7 +2045,6 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.54;
 allow 94.228.163.25;
