Update lists at 20241026-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -235,7 +235,6 @@ deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
-deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -489,6 +488,7 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -782,6 +782,7 @@ deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a12:dd47:8513::10;
 deny 2a12:dd47:8513::11;
+deny 2a12:dd47:8513::12;
 deny 2a12:dd47:8513::2;
 deny 2a12:dd47:8513::3;
 deny 2a12:dd47:8513::4;
