--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -44,7 +44,6 @@ allow 107.189.11.113;
 allow 107.189.11.53;
 allow 107.189.1.160;
 allow 107.189.1.167;
-allow 107.189.1.175;
 allow 107.189.1.198;
 allow 107.189.12.3;
 allow 107.189.12.48;
@@ -171,6 +170,7 @@ allow 154.213.184.63;
 allow 154.213.184.7;
 allow 154.213.184.74;
 allow 154.213.184.79;
+allow 154.213.184.87;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
@@ -221,6 +221,7 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 174.129.141.205;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -260,6 +261,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.55.71.119;
 allow 180.150.226.99;
+allow 18.234.99.66;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -727,7 +729,6 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
-allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -1199,7 +1200,6 @@ allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
-allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1454,6 +1454,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1747,6 +1748,7 @@ allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::10;
 allow 2a12:dd47:8513::11;
+allow 2a12:dd47:8513::12;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1777,6 +1779,10 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.83.3.192;
+allow 3.84.2.40;
+allow 3.86.27.99;
+allow 3.88.237.225;
 allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
@@ -1785,7 +1791,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1908,7 +1914,10 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
+allow 52.91.77.51;
 allow 5.34.182.203;
+allow 54.211.210.5;
+allow 54.237.123.25;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1922,6 +1931,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.176.81.96;
 allow 64.227.115.78;
@@ -1970,6 +1980,7 @@ allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
@@ -2052,6 +2063,7 @@ allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
+allow 94.232.43.221;
 allow 94.32.66.15;
 allow 94.72.98.8;
 allow 94.75.225.81;
