--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -44,7 +44,6 @@ set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.11.53;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
-set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.198;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.48;
@@ -171,6 +170,7 @@ set_real_ip_from 154.213.184.63;
 set_real_ip_from 154.213.184.7;
 set_real_ip_from 154.213.184.74;
 set_real_ip_from 154.213.184.79;
+set_real_ip_from 154.213.184.87;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
 set_real_ip_from 154.213.185.133;
@@ -221,6 +221,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 174.129.141.205;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
@@ -260,6 +261,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.55.71.119;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.234.99.66;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -727,7 +729,6 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
-set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
@@ -1199,7 +1200,6 @@ set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
-set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1454,6 +1454,7 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1747,6 +1748,7 @@ set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::10;
 set_real_ip_from 2a12:dd47:8513::11;
+set_real_ip_from 2a12:dd47:8513::12;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
@@ -1777,6 +1779,10 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 3.83.3.192;
+set_real_ip_from 3.84.2.40;
+set_real_ip_from 3.86.27.99;
+set_real_ip_from 3.88.237.225;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
@@ -1785,7 +1791,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.249;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1908,7 +1914,10 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 52.91.77.51;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.211.210.5;
+set_real_ip_from 54.237.123.25;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1922,6 +1931,7 @@ set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.176.81.96;
 set_real_ip_from 64.227.115.78;
@@ -1970,6 +1980,7 @@ set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.208.120;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
@@ -2052,6 +2063,7 @@ set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
+set_real_ip_from 94.232.43.221;
 set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.72.98.8;
 set_real_ip_from 94.75.225.81;
