--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -224,7 +224,6 @@ allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
 allow 176.58.100.98;
@@ -329,6 +328,7 @@ allow 185.195.71.6;
 allow 185.195.71.7;
 allow 185.195.71.8;
 allow 185.195.71.9;
+allow 185.196.61.142;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -1086,7 +1086,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1718,6 +1717,7 @@ allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a11:840:54:1b::d439:2543;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
@@ -1943,7 +1943,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
