--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -224,7 +224,6 @@ deny 173.0.3.111;
 deny 173.249.57.253;
 deny 173.255.198.243;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.227.215.50;
 deny 176.58.100.98;
@@ -329,6 +328,7 @@ deny 185.195.71.6;
 deny 185.195.71.7;
 deny 185.195.71.8;
 deny 185.195.71.9;
+deny 185.196.61.142;
 deny 185.207.107.130;
 deny 185.207.107.216;
 deny 185.220.100.240;
@@ -1086,7 +1086,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1718,6 +1717,7 @@ deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a11:840:54:1b::d439:2543;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
@@ -1943,7 +1943,6 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
