--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -122,7 +122,6 @@ deny 2406:8dc0:6005::97f2:9c02;
 deny 2407:3640:2207:8882::1;
 deny 2407:cdc0:c004::d44:d46f;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -753,6 +752,7 @@ deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a11:840:54:1b::d439:2543;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
