Update lists at 20241028-0600

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -115,9 +115,11 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:95ff:fe5d:2041;
 allow 2400:d320:2202:5765::1;
+allow 2401:b60:5:f855:410c:d769:49dc:967e;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:8dc0:6004:60d7:cbc3:569a:3eee:42d5;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:cdc0:c004::d44:d46f;
@@ -131,6 +133,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -699,6 +702,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
+allow 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
