--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -136,6 +136,7 @@ set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.11.86.155;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.171.12.88;
@@ -572,6 +573,7 @@ set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.7.33.146;
+set_real_ip_from 185.81.29.132;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.214.104.21;
@@ -1054,9 +1056,11 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:95ff:fe5d:2041;
 set_real_ip_from 2400:d320:2202:5765::1;
+set_real_ip_from 2401:b60:5:f855:410c:d769:49dc:967e;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2406:8dc0:6004:60d7:cbc3:569a:3eee:42d5;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
@@ -1077,6 +1081,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1646,6 +1651,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
+set_real_ip_from 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
@@ -1766,6 +1772,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 38.6.224.183;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
@@ -1773,7 +1780,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -2008,6 +2014,7 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
+set_real_ip_from 91.229.132.69;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.223.2.183;
@@ -2033,7 +2040,6 @@ set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
-set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
