--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -115,9 +115,11 @@ set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:95ff:fe5d:2041;
 set_real_ip_from 2400:d320:2202:5765::1;
+set_real_ip_from 2401:b60:5:f855:410c:d769:49dc:967e;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2406:8dc0:6004:60d7:cbc3:569a:3eee:42d5;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
@@ -131,6 +133,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -699,6 +702,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
+set_real_ip_from 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
