--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -224,9 +224,11 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.86.78.208;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -524,8 +526,6 @@ allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.220.204.150;
 allow 185.225.226.182;
-allow 185.225.69.203;
-allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
@@ -1083,6 +1083,7 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
+allow 2602:fa59:2:eb::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1456,6 +1457,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0b:4140:c333::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1660,7 +1662,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1784,7 +1785,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1965,7 +1965,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
 allow 8.218.9.41;
-allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
@@ -1996,7 +1995,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
