Update lists at 20241028-1800

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -160,6 +160,7 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.184.100;
 set_real_ip_from 154.213.184.105;
 set_real_ip_from 154.213.184.111;
+set_real_ip_from 154.213.184.13;
 set_real_ip_from 154.213.184.131;
 set_real_ip_from 154.213.184.17;
 set_real_ip_from 154.213.184.21;
@@ -224,7 +225,6 @@ set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
-set_real_ip_from 172.86.78.208;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
@@ -524,7 +524,6 @@ set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
-set_real_ip_from 185.220.204.150;
 set_real_ip_from 185.225.226.182;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
@@ -1083,7 +1082,6 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
-set_real_ip_from 2602:fa59:2:eb::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1659,7 +1657,6 @@ set_real_ip_from 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1747,6 +1744,7 @@ set_real_ip_from 2a12:dd47:8513::13;
 set_real_ip_from 2a12:dd47:8513::14;
 set_real_ip_from 2a12:dd47:8513::15;
 set_real_ip_from 2a12:dd47:8513::16;
+set_real_ip_from 2a12:dd47:8513::17;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
@@ -1785,6 +1783,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1846,7 +1845,6 @@ set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
-set_real_ip_from 45.9.148.113;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -2044,7 +2042,6 @@ set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
-set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
