--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -160,6 +160,7 @@ allow 154.16.116.61;
 allow 154.213.184.100;
 allow 154.213.184.105;
 allow 154.213.184.111;
+allow 154.213.184.13;
 allow 154.213.184.131;
 allow 154.213.184.17;
 allow 154.213.184.21;
@@ -224,7 +225,6 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.86.78.208;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -524,7 +524,6 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
-allow 185.220.204.150;
 allow 185.225.226.182;
 allow 185.227.134.106;
 allow 185.227.68.78;
@@ -1083,7 +1082,6 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
-allow 2602:fa59:2:eb::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1659,7 +1657,6 @@ allow 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
-allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1747,6 +1744,7 @@ allow 2a12:dd47:8513::13;
 allow 2a12:dd47:8513::14;
 allow 2a12:dd47:8513::15;
 allow 2a12:dd47:8513::16;
+allow 2a12:dd47:8513::17;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1785,6 +1783,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1846,7 +1845,6 @@ allow 45.83.104.137;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
-allow 45.9.148.113;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -2044,7 +2042,6 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.54;
 allow 94.228.163.25;
