--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -134,7 +134,6 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
-set_real_ip_from 2602:fa59:2:eb::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -709,7 +708,6 @@ set_real_ip_from 2a0e:97c0:7d4:ff47:be24:11ff:fe87:9b9f;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -797,6 +795,7 @@ set_real_ip_from 2a12:dd47:8513::13;
 set_real_ip_from 2a12:dd47:8513::14;
 set_real_ip_from 2a12:dd47:8513::15;
 set_real_ip_from 2a12:dd47:8513::16;
+set_real_ip_from 2a12:dd47:8513::17;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
