Update lists at 20241029-0600

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -504,6 +504,7 @@ deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0b:4140:c333::2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
@@ -794,6 +795,7 @@ deny 2a12:dd47:8513::14;
 deny 2a12:dd47:8513::15;
 deny 2a12:dd47:8513::16;
 deny 2a12:dd47:8513::17;
+deny 2a12:dd47:8513::18;
 deny 2a12:dd47:8513::2;
 deny 2a12:dd47:8513::3;
 deny 2a12:dd47:8513::4;
