--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -160,6 +160,7 @@ allow 154.16.116.61;
 allow 154.213.184.100;
 allow 154.213.184.105;
 allow 154.213.184.111;
+allow 154.213.184.120;
 allow 154.213.184.13;
 allow 154.213.184.131;
 allow 154.213.184.17;
@@ -735,7 +736,6 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
-allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -1456,6 +1456,7 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0b:4140:c333::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1746,6 +1747,7 @@ allow 2a12:dd47:8513::14;
 allow 2a12:dd47:8513::15;
 allow 2a12:dd47:8513::16;
 allow 2a12:dd47:8513::17;
+allow 2a12:dd47:8513::18;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1784,10 +1786,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1964,6 +1964,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
 allow 8.218.9.41;
+allow 82.221.128.191;
 allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.208.120;
@@ -1972,6 +1973,7 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
+allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.93.218.204;
 allow 86.205.5.107;
@@ -2042,7 +2044,6 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.54;
 allow 94.228.163.25;
