Update lists at 20241101-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -849,6 +849,7 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
+allow 204.236.249.126;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -1073,6 +1074,7 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
+allow 23.20.95.127;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:95ff:fe5d:2041;
@@ -1457,7 +1459,6 @@ allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
-allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
@@ -1673,6 +1674,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -1804,7 +1806,9 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
+allow 34.229.208.91;
 allow 35.0.127.52;
+allow 35.153.200.105;
 allow 37.114.41.119;
 allow 3.71.175.220;
 allow 37.120.239.59;
@@ -1814,6 +1818,7 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
+allow 3.84.153.203;
 allow 38.6.224.183;
 allow 38.97.116.244;
 allow 45.11.229.132;
@@ -1822,7 +1827,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.180.27;
@@ -1919,7 +1923,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1929,7 +1932,6 @@ allow 5.255.118.244;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
-allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
@@ -1943,7 +1945,10 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
+allow 52.90.16.210;
 allow 5.34.182.203;
+allow 54.146.16.246;
+allow 54.224.80.123;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1955,6 +1960,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.88.141.48;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
@@ -2042,7 +2048,6 @@ allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.202.5.104;
-allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.75.153;
@@ -2098,3 +2103,4 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
+allow 98.83.134.154;
