--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -849,6 +849,7 @@ deny 204.137.14.105;
 deny 204.137.14.106;
 deny 204.137.14.92;
 deny 204.194.29.4;
+deny 204.236.249.126;
 deny 204.8.156.142;
 deny 204.85.191.7;
 deny 204.85.191.8;
@@ -1073,6 +1074,7 @@ deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.173.216.67;
 deny 23.184.48.13;
+deny 23.20.95.127;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2400:8901::f03c:95ff:fe5d:2041;
@@ -1457,7 +1459,6 @@ deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
-deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
@@ -1673,6 +1674,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
@@ -1804,7 +1806,9 @@ deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.135;
+deny 34.229.208.91;
 deny 35.0.127.52;
+deny 35.153.200.105;
 deny 37.114.41.119;
 deny 3.71.175.220;
 deny 37.120.239.59;
@@ -1814,6 +1818,7 @@ deny 37.228.129.128;
 deny 37.228.129.5;
 deny 37.228.129.63;
 deny 37.48.120.196;
+deny 3.84.153.203;
 deny 38.6.224.183;
 deny 38.97.116.244;
 deny 45.11.229.132;
@@ -1822,7 +1827,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.247;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.180.27;
@@ -1919,7 +1923,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1929,7 +1932,6 @@ deny 5.255.118.244;
 deny 5.255.123.158;
 deny 5.255.123.164;
 deny 5.255.124.150;
-deny 5.255.125.196;
 deny 5.255.125.41;
 deny 5.255.127.222;
 deny 5.255.97.221;
@@ -1943,7 +1945,10 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
+deny 52.90.16.210;
 deny 5.34.182.203;
+deny 54.146.16.246;
+deny 54.224.80.123;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1955,6 +1960,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.88.141.48;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
@@ -2042,7 +2048,6 @@ deny 91.103.253.141;
 deny 91.132.144.59;
 deny 91.139.160.150;
 deny 91.202.5.104;
-deny 91.203.144.194;
 deny 91.203.145.116;
 deny 91.206.26.26;
 deny 91.208.75.153;
@@ -2098,3 +2103,4 @@ deny 95.211.244.28;
 deny 96.126.98.146;
 deny 96.66.15.152;
 deny 98.128.173.33;
+deny 98.83.134.154;
